--- a/HTC/Docker/WebApplicationWithDockerCompose/WebApplicationWithDockerCompose/WebApplicationWithDockerCompose.csproj
+++ b/HTC/Docker/WebApplicationWithDockerCompose/WebApplicationWithDockerCompose/WebApplicationWithDockerCompose.csproj
@@ -3,7 +3,8 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <UserSecretsId>5b46d52f-6642-4007-8117-446b5adc7fe7</UserSecretsId>
-    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
