Implementation "HelloWorld" functionality for WebApplicationWithDockerCompose.

--- a/HTC/Docker/WebApplicationWithDockerCompose/WebApplicationWithDockerCompose/appsettings.json
+++ b/HTC/Docker/WebApplicationWithDockerCompose/WebApplicationWithDockerCompose/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "ApplicationContextConnection": "Server=sqlservercontainer;User Id=sa;Password=Pass@word;Database=DbOfWebAppWithDockerCompose"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
