--- a/HTC/Mapping/src/ResearchOfMapping/Benchmarking/Benchmarking.csproj
+++ b/HTC/Mapping/src/ResearchOfMapping/Benchmarking/Benchmarking.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="BenchmarkDotNet" Version="0.13.5" />
     <PackageReference Include="Mapster" Version="7.3.0" />
+    <PackageReference Include="Riok.Mapperly" Version="2.7.0" />
   </ItemGroup>
 
 </Project>
