--- a/HTC/Mapping/src/ResearchOfMapping/Benchmarking/Benchmarking.csproj
+++ b/HTC/Mapping/src/ResearchOfMapping/Benchmarking/Benchmarking.csproj
@@ -11,6 +11,11 @@
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="BenchmarkDotNet" Version="0.13.5" />
     <PackageReference Include="Mapster" Version="7.3.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.3" />
     <PackageReference Include="Riok.Mapperly" Version="2.7.0" />
   </ItemGroup>
 
