Base research of using Redis.

--- a/HTC/Redis/src/RedisForDummies/RedisForDummies.Api/appsettings.json
+++ b/HTC/Redis/src/RedisForDummies/RedisForDummies.Api/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "RedisSettings": {
+    //По-умолчанию контейнер Redis'а запускается на порту 6379.
+    "Configuration": "redis_instance:6379",
+    "InstanceName": "MySuperCoolSampleInstance"
+  }
 }
