--- a/HTC/Redis/src/RedisForDummies/RedisForDummies.Api/RedisForDummies.Api.csproj
+++ b/HTC/Redis/src/RedisForDummies/RedisForDummies.Api/RedisForDummies.Api.csproj
@@ -6,11 +6,18 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>0475ee96-8084-4a7f-8361-ed6b2dc7d0ef</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="7.0.11" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.5" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\RedisForDummies.Application\RedisForDummies.Application.csproj" />
+    <ProjectReference Include="..\RedisForDummies.Infrastructure\RedisForDummies.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
