Trying then understand integration with Apache Ignite which is unsuccessful.

--- a/HTC/Redis/src/RedisForDummies/RedisForDummies.Api/appsettings.json
+++ b/HTC/Redis/src/RedisForDummies/RedisForDummies.Api/appsettings.json
@@ -6,6 +6,11 @@
     }
   },
   "AllowedHosts": "*",
+  "ApacheIgniteSettings": {
+    "Endpoints": [
+      "ignite_instance:47100"
+    ]
+  },
   "RedisSettings": {
     //По-умолчанию контейнер Redis'а запускается на порту 6379.
     "Configuration": "redis_instance:6379",
