--- a/HTC/Redis/src/RedisForDummies/RedisForDummies.Api/RedisForDummies.Api.csproj
+++ b/HTC/Redis/src/RedisForDummies/RedisForDummies.Api/RedisForDummies.Api.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Apache.Extensions.Caching.Ignite" Version="3.0.0" />
     <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="9.0.2" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="8.0.0" />
