--- a/HTC/Redis/src/RedisForDummies/RedisForDummies.Api/appsettings.json
+++ b/HTC/Redis/src/RedisForDummies/RedisForDummies.Api/appsettings.json
@@ -9,7 +9,11 @@
   "ApacheIgniteSettings": {
     "Endpoints": [
       "ignite_instance:10800"
-    ]
+    ],
+    "Initialization": {
+      "body": "{\"metaStorageNodes\": [\"defaultNode\"], \"clusterName\": \"myCluster\"}",
+      "url": "http://ignite_instance:10300/management/v1/cluster/init"
+    }
   },
   "RedisSettings": {
     //По-умолчанию контейнер Redis'а запускается на порту 6379.
